# greenffts

./: CMakeLists.txt  LICENSE  benchfft_infos.txt
src/: CMakeLists.txt  dxpose.h  fft2d.c  fftlib.c
tests/: CMakeLists.txt
tests/Matlab/: CMakeLists.txt  conv2dTest.c  conv2dtest.m  convTest.c  convtest.m  rfft2dTestML.c  rfft2dTestML.m
tests/TimingCode/: CMakeLists.txt  fftTiming.c  rfftTiming.c
